--- a/index.html
+++ b/index.html
@@ -374,7 +374,8 @@
               <div class="card-reveal">
                 <!-- TODO: change this -- only close button -->
                 <!-- <span class="card-title brown-text">Accomplishments<i class="mdi-navigation-close right"></i></span> -->
-                <span class="card-title grey-text text-darken-4">DataFire Networks<i class="material-icons right">close</i></span>
+                <span class="card-title grey-text text-darken-4">DataFire Networks<i
+                    class="mdi-navigation-close right"></i></span>
                 <ul>
                   <li><b>Tools:</b> PHP, Nginx, MySQL</li>
                   <li>Customized the product and optimized it.</li>
@@ -405,7 +406,7 @@
               </div>
               <div class="card-content">
                 <span class="card-title activator teal-text hoverline">Multiviewer System<i
-                    class="mdi-navigation-more-vert right"></i></span>
+                    class="mdi-navigation-close right"></i></span>
                 <p>
                   A monitoring video wall setup for client specializing in TV content.
                 </p>
@@ -453,7 +454,8 @@
               <div class="card-reveal">
                 <!-- TODO: change this -- only close button -->
                 <!-- <span class="card-title brown-text">Accomplishments<i class="mdi-navigation-close right"></i></span> -->
-                <span class="card-title grey-text text-darken-4">KRC Cloud Solution<i class="material-icons right">close</i></span>
+                <span class="card-title grey-text text-darken-4">KRC Cloud Solution<i
+                    class="mdi-navigation-close right"></i></span>
                 <ul>
                   <li><b>Tools:</b>Ovirt, GlusterFS, NFS, Grafana</li>
                   <li>Designed the system from scratch and deployed the physical elements personally and completed connectivity.</li>
