--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
               <div class="card-reveal">
                 <!-- TODO: change this -- only close button -->
                 <!-- <span class="card-title brown-text">Accomplishments<i class="mdi-navigation-close right"></i></span> -->
-                <span class="card-title grey-text text-darken-4">DataFire Networks<i
+                <span class="card-title activator teal-text hoverline">DataFire Networks<i
                     class="mdi-navigation-close right"></i></span>
                 <ul>
                   <li><b>Tools:</b> PHP, Nginx, MySQL</li>
@@ -406,7 +406,7 @@
               </div>
               <div class="card-content">
                 <span class="card-title activator teal-text hoverline">Multiviewer System<i
-                    class="mdi-navigation-close right"></i></span>
+                    class="mdi-navigation-more-vert right"></i></span>
                 <p>
                   A monitoring video wall setup for client specializing in TV content.
                 </p>
@@ -414,7 +414,8 @@
               <div class="card-reveal">
                 <!-- TODO: change this -- only close button -->
                 <!-- <span class="card-title brown-text">Accomplishments<i class="mdi-navigation-close right"></i></span> -->
-                <span class="card-title grey-text text-darken-4">Multiviewer System<i class="material-icons right">close</i></span>
+                <span class="card-title activator teal-text hoverline">Multiviewer System<i
+                    class="mdi-navigation-close right"></i></span>
                 <ul>
                   <li><b>Tools:</b> Windows Server, NVIDIA GPU, Cinegy Multiviewer, Display Design</li>
                   <li>Setup a Windows server and setup Cinegy Multiviewer with appropriate licenses.</li>
@@ -454,7 +455,7 @@
               <div class="card-reveal">
                 <!-- TODO: change this -- only close button -->
                 <!-- <span class="card-title brown-text">Accomplishments<i class="mdi-navigation-close right"></i></span> -->
-                <span class="card-title grey-text text-darken-4">KRC Cloud Solution<i
+                <span class="card-title activator teal-text hoverline">KRC Cloud Solution<i
                     class="mdi-navigation-close right"></i></span>
                 <ul>
                   <li><b>Tools:</b>Ovirt, GlusterFS, NFS, Grafana</li>
