--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   <meta name="twitter:description" content="Software Developer" />
   <meta name="twitter:url" content="https://twitter.com/varad_bhogayata" />
   <meta name="author" content="Varad Bhogayata" />
-  <meta name="description" content="Software Developer with a passion for backend development and artificial intelligence." />
+  <meta name="description" content="Software Developer with a passion for backend development and artificial intelligence." /> -->
   <link rel="apple-touch-icon" sizes="57x57" href="/mbahnaf-portfolio/assets/img/favicon/apple-icon-57x57.png" />
   <link rel="apple-touch-icon" sizes="60x60" href="/mbahnaf-portfolio/assets/img/favicon/apple-icon-60x60.png" />
   <link rel="apple-touch-icon" sizes="72x72" href="/mbahnaf-portfolio/assets/img/favicon/apple-icon-72x72.png" />
@@ -66,7 +66,7 @@
   <meta name="msapplication-TileColor" content="#ffffff" />
   <meta name="msapplication-TileImage" content="/mbahnaf-portfolio/assets/img/favicon/ms-icon-144x144.png" />
   <meta name="theme-color" content="#ffffff" />
-  <meta name="robots" content="index, follow" /> -->
+  <meta name="robots" content="index, follow" />
   <!-- Google Site Verification for indexing -->
   <!-- <meta name="google-site-verification" content="_qxK8tePiU2fhnwlwnJ7pkDFnj1k2EiKq_cYGy1Cb84" /> -->
 </head>
@@ -205,7 +205,7 @@
               <h2>Hi, I'm <span class="teal">Muhammad Mutasim Billah.</span></h2>
               <h5 style="color:#fff">A <span class="typing" style="font-weight: 300; color:#52f0d5"></span></h5>
               <!-- <h5 style="color:#00796b">A <span class="typing" style="font-weight: 300; color:#fff"></span></h5> -->
-              <h5>Experienced cloud system engineer with 4 years of relevant background in the industry. I have a background working on high-availability services like satellite networks, OTT video streaming platforms, broadcast systems and datacenter compute systems.
+              <h5>Experienced cloud system engineer with 4 years of relevant background in the industry, working on high-availability services like satellite networks, OTT video streaming platforms, broadcast systems and datacenter compute systems.
                 I am passionate about designing systems that solve real-world problems impacting millions of users.</h5>
             </div>
             <div class="social">
@@ -334,7 +334,7 @@
               </li>
               <li>
                 Providing support for local area and wide area network hardware/software. Responded to user problems with system integration, software applications, and hardware.</li>
-              <li>Researching and developing new tools to achieve a fluid workflow and monitoring network services and managed configurations personally where required.</li>
+              <li>Researching and developing new tools to achieve fluid workflow and monitoring network services and managed configurations personally where required.</li>
               <li>Worked with fiber-optic based network connections. Monitored and maintained network, including LAN, WAN, wireless, hubs and routers.</li>
               <li>
                 <b>Tools and Experience:</b> Linux · IT Operations · System Administration · Systems Design · Network-Attached Storage (NAS) · MySQL · Windows Server · Research and Development (R&D) · Data Analysis · Data Center Management · IT Audit · Debugging · Microsoft Office · IT Infrastructure Management · Mikrotik
