--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
         <div class="col-md-9">
           <div class="content section-padding valign" style="margin-left: 10%; margin-top: 50px;">
             <div class="caption">
-              <h2>Hi, I'm <span class="teal">Muhammad Mutasim Billah.</span></h2>
+              <h2>Hi, I'm <span class="teal">Muhammad Mutasim Billah</span></h2>
               <h5 style="color:#fff">A <span class="typing" style="font-weight: 300; color:#52f0d5"></span></h5>
               <!-- <h5 style="color:#00796b">A <span class="typing" style="font-weight: 300; color:#fff"></span></h5> -->
               <h5>Cloud system engineer with 4 years of relevant experience in the industry, working on high-availability services like satellite networks, OTT video streaming platforms and datacenter compute solutions. I enjoy designing systems that solve real-world problems impacting millions of lives.</h5>
