--- a/index.html
+++ b/index.html
@@ -217,9 +217,7 @@
                 <button class="icon-btn github">
                   <i class="fa fa-github"></i>
                 </button>
-              </a>
-
-            
+              </a>            
             </div>
             <div class='buttons'>
               <a href="#experience" class="readme">Read More</a>
@@ -784,7 +782,7 @@
   <script src="assets/vendor/typed.js/typed.min.js"></script>
   <script type="text/javascript">
     var typed = new Typed('.typing',{
-      strings: ["Pythonist", "DevOps Practitioner", "Cloud Explorer","Fast Learner"],
+      strings: ["Pythonist", "DevOps Practitioner", "Cloud Explorer"],
       loop: true,
       typeSpeed: 80,
       backSpeed: 40
