--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
           <div class="card-content">
             <div class="row">
               <div class="col s12 m2">
-                <a href="https://jadoobroadband.com" target="_blank"><img alt="Zhiffy logo"
+                <a href="https://jadoobroadband.com" target="_blank"><img alt="Jadoo logo"
                     src="/mbahnaf-portfolio/assets/img/digijadoo.png" class="responsive-img center-block" /></a>
               </div>
               <!-- <div class="col s12 m10"> -->
@@ -782,7 +782,7 @@
   <script src="assets/vendor/typed.js/typed.min.js"></script>
   <script type="text/javascript">
     var typed = new Typed('.typing',{
-      strings: ["Pythonist", "DevOps Practitioner", "Cloud Explorer"],
+      strings: ["Python-charmer", "DevOps Practitioner", "Cloud Explorer"],
       loop: true,
       typeSpeed: 80,
       backSpeed: 40
