--- a/index.html
+++ b/index.html
@@ -242,6 +242,38 @@
           <div class="card-content">
             <div class="row">
               <div class="col s12 m2">
+                <a href="https://simec-inc.net/" target="_blank"><img alt="BJIT logo"
+                    src="/mbahnaf-portfolio/assets/img/1565240201339.jpeg" class="responsive-img center-block" /></a>
+              </div>
+              <div class="col s12 m10">
+                <p>
+                  <span class="card-title"><a href="https://bjitgroup.com" target="_blank"
+                      class="teal-text hoverline">SIMEC Group</a></span>
+                </p>
+              </div>
+            </div>
+            <div class="role brown-text text-darken-2">DevOps Engineer</div>
+            <ul>
+              <li>
+                Worked on multiple high-stakes projects for important clients.
+              </li>
+              <li>
+                Trained on various disciplines at the company institute.
+              </li>
+              <li>
+                <b>Tools:</b> Python . Java . Jenkins . React . Linux . AWS . GCP . Ansible
+              </li>
+            </ul>
+          </div>
+          <div class="card-action">
+            <span>Aug 2023 - Present | Dhaka, Bangladesh</span>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="card-content">
+            <div class="row">
+              <div class="col s12 m2">
                 <a href="https://bjitgroup.com" target="_blank"><img alt="BJIT logo"
                     src="/mbahnaf-portfolio/assets/img/bjit.png" class="responsive-img center-block" /></a>
               </div>
@@ -252,7 +284,7 @@
                 </p>
               </div>
             </div>
-            <div class="role brown-text text-darken-2">Software Engineer</div>
+            <div class="role brown-text text-darken-2">Trainee Software Engineer, DevOps and Cloud</div>
             <ul>
               <li>
                 Completed a comprehensive 4 months training program on DevOps and Cloud.
@@ -266,7 +298,7 @@
             </ul>
           </div>
           <div class="card-action">
-            <span>Apr 2023 - Present | Dhaka, Bangladesh</span>
+            <span>Apr 2023 - August 2023 | Dhaka, Bangladesh</span>
           </div>
         </div>
 
