--- a/index.html
+++ b/index.html
@@ -352,11 +352,11 @@
               <div class="col s12 m10">
                 <p>
                   <span class="card-title"><a href="https://jadoobroadband.com/" target="_blank"
-                      class="teal-text hoverline">Jadoo Broadband</a></span>
+                      class="teal-text hoverline">Digi Jadoo Broadband</a></span>
                 </p>
               </div>
             </div>
-            <div class="role brown-text text-darken-2">Assistant System Engineer</div>
+            <div class="role brown-text text-darken-2">Assistant System Engineer, Development Team</div>
             <ul>
               <li>
                 Personally handled IPTV projects for high-value clients. Took part in site-reliability tasks and maintained documentation.
