--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
                 </p>
               </div>
             </div>
-            <div class="role brown-text text-darken-2">Assistant System Engineer, Development Team</div>
+            <div class="role brown-text text-darken-2">Assistant System Engineer</div>
             <ul>
               <li>
                 Personally handled IPTV projects for high-value clients. Took part in site-reliability tasks and maintained documentation.
