--- a/index.html
+++ b/index.html
@@ -645,6 +645,16 @@
                       </div>
                     </div>
                   </div>
+                  <div class="col s12 m4">
+                    <div class="card">
+                      <div class="card-image">
+                        <img src="/mbahnaf-portfolio/assets/img/cybersecurity.png">
+                      </div>
+                      <div class="card-content">
+                        <a href="https://www.credly.com/badges/c30d0b0c-c8b3-43a2-87a3-28c47c69415d" target="_blank"><span class="card-title teal-text">Google Cybersecurity Certificate</span></a>
+                      </div>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
