--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
               </div>
               <div class="col s12 m10">
                 <p>
-                  <span class="card-title"><a href="https://bjitgroup.com" target="_blank"
+                  <span class="card-title"><a href="https://simecsystem.com/" target="_blank"
                       class="teal-text hoverline">SIMEC Group</a></span>
                 </p>
               </div>
@@ -255,7 +255,7 @@
             <div class="role brown-text text-darken-2">DevOps Engineer</div>
             <ul>
               <li>
-                Worked on multiple high-stakes projects for important clients.
+                Worked on multiple high-stakes projects for both government and private clients.
               </li>
               <li>
                 Trained on various disciplines at the company institute.
