--- a/index.html
+++ b/index.html
@@ -258,10 +258,10 @@
                 Worked on multiple high-stakes projects for both government and private clients.
               </li>
               <li>
-                Trained on various disciplines at the company institute.
+                Reduced toil by automating testing and deployment in the company workflow processes.
               </li>
               <li>
-                <b>Tools:</b> Python . Java . Jenkins . React . Linux . AWS . GCP . Ansible . SonarQube
+                <b>Tools:</b> Python . Java . Jenkins . React . Linux . AWS . GCP . Ansible . SonarQube . GitLab
               </li>
             </ul>
           </div>
