--- a/index.html
+++ b/index.html
@@ -807,7 +807,8 @@
                   <li><a class="white-text" href="https://g.dev/mbahnaf" target="_blank">Google Developer Profile</a></li>
                   <li><a class="white-text" href="https://hackerrank.com/mbahnaf" target="_blank">HackerRank</a></li>
                   <li><a class="white-text" href="https://www.credly.com/users/mutasim-billah/badges" target="_blank">Credly</a></li>
-                  <li><a class="white-text" href="https://www.cloudskillsboost.google/public_profiles/8f19cbd5-8940-4aed-969f-b68914c733af" target="_blank">Qwiklabs</a></li>
+                  <li><a class="white-text" href="https://www.cloudskillsboost.google/public_profiles/8f19cbd5-8940-4aed-969f-b68914c733af" target="_blank">Google Cloud Skills Boost</a></li>
+                  <li><a class="white-text" href="https://www.coursera.org/user/9a881c7308d614168b5bd786e14c9f16" target="_blank">Coursera</a></li>
                 </ul>
               </div>
             </div>
