--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
       </li>
       <li class="bold">
         <a aria-label="Open Mutasim's Resume in a new tab"
-          href="https://drive.google.com/file/d/1OXz_WObGARU40Z4gwo_bV9Vlwd-tWmj9/view?usp=sharing" target="_blank"
+          href="https://drive.google.com/file/d/1jbzt8nBWCT6Db7lZnTqcpXYhj-b7V3wR/view?usp=drive_link" target="_blank"
           class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a>
       </li>
     </ul>
