--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
         <!-- <a aria-label="Open Varad's resume in a new tab" href="#resume" target="_blank"
           onclick="window.open('https://drive.google.com/file/d/1vYi-bMyIsZPve0x_clxY8xsDtiHiOMd3/view?usp=sharing')"
           class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a> -->
-        <a aria-label="Open Mutasim's resume in a new tab" href="https://drive.google.com/file/d/1OXz_WObGARU40Z4gwo_bV9Vlwd-tWmj9/view?usp=sharing" target="_blank"
+        <a aria-label="Open Mutasim's resume in a new tab" href="https://drive.google.com/file/d/1jbzt8nBWCT6Db7lZnTqcpXYhj-b7V3wR/view?usp=drive_link" target="_blank"
         class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a>  
       </li>
     </ul>
