--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
             </ul>
           </div>
           <div class="card-action">
-            <span>Aug 2023 - Present | Dhaka, Bangladesh</span>
+            <span>Aug 2023 - Nov 2023 | Dhaka, Bangladesh</span>
           </div>
         </div>
 
